--- a/lablog-frontend/package.json
+++ b/lablog-frontend/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^19.1.1",
     "react-error-boundary": "^6.0.0",
     "recharts": "^3.1.2",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
